--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <div class="work__text">
                     <h3>Hells Kitchen</h3>
                     <p>
-                        ---
+                        ---------------
                     </p>
                     <div class="work__links">
-                        <a>
-                            Visit Site <span>&rarr;</span>
+                        <a href="https://github.com/doruk-altan/HellsKitchen" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
                         </a>
                         <a href="https://github.com/doruk-altan/HellsKitchen" title="View Source Code" target="_blank">
                             <img src="./images/github.svg" class="work__code" alt="GitHub">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/HellsKitchen_image" class="work__image" alt="Project 1" />
+                    <img src="./images/HellsKitchen_image.png" class="work__image" alt="Project 1" />
                 </div>
             </div>
 
