--- a/index.html
+++ b/index.html
@@ -81,56 +81,41 @@
 
             <div class="work__box">
                 <div class="work__text">
-                    <h3>Portfolio Template</h3>
+                    <h3>Zombie Takeover</h3>
                     <p>
-                        A free Open Source Portfolio for anyone to use for free.
+                        ---------------
                     </p>
-                    <ul class="work__list">
-                        <li>HTML</li>
-                        <li>SCSS</li>
-                        <li>JavaScript</li>
-                        <li>Parcel</li>
-                    </ul>
-
                     <div class="work__links">
-                        <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                            Visit Site <span>&rarr;</span>
+                        <a href="https://github.com/doruk-altan/Zombie-Takeover" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
                         </a>
-                        <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                        <a href="https://github.com/doruk-altan/Zombie-Takeover" title="View Source Code" target="_blank">
                             <img src="./images/github.svg" class="work__code" alt="GitHub">
                         </a>
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+                    <img src="./images/ZombieTakeover_image.png" class="work__image" alt="Project 1" />
                 </div>
             </div>
 
             <div class="work__box">
                 <div class="work__text">
-                    <h3>Calculator</h3>
+                    <h3>Angry Birds Clone</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                        eius.
+                        ---------------
                     </p>
-                    <ul class="work__list">
-                        <li>React</li>
-                        <li>Next.js</li>
-                        <li>Node</li>
-                        <li>MongoDB</li>
-                    </ul>
-
                     <div class="work__links">
-                        <a href="#" class="link__text">
-                            Visit Site <span>&rarr;</span>
+                        <a href="https://github.com/doruk-altan/Angry-Birds" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
                         </a>
-                        <a href="#">
-                            <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                        <a href="https://github.com/doruk-altan/Angry-Birds" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
                         </a>
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+                    <img src="./images/AngryBirds_image.png" class="work__image" alt="Project 1" />
                 </div>
             </div>
 
@@ -199,12 +184,7 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          The quickest way to reach out to me is via an email.
         </p>
         <!-- Replace the email with yours -->
         <a href="mailto:dorukaltancs@gmail.com" class="btn">dorukaltancs@gmail.com</a>
@@ -216,35 +196,18 @@
 
   <footer role="contentinfo" class="footer">
     <div class="row">
-      <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/doruk-altan" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
+          <a href="www.linkedin.com/in/doruk-altan-76957826">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
       </ul>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
     </div>
   </footer>
 
