--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="www.linkedin.com/in/doruk-altan-76957826">
+          <a href="https://www.linkedin.com/in/doruk-altan-76957826">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
