--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/ZombieTakeover_image.png" class="work__image" alt="Project 1" />
+                    <img src="./images/ZombieTakeover_image.png" class="work__image" alt="Project 2" />
                 </div>
             </div>
 
@@ -115,35 +115,87 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/AngryBirds_image.png" class="work__image" alt="Project 1" />
+                    <img src="./images/AngryBirds_image.png" class="work__image" alt="Project 3" />
                 </div>
             </div>
 
             <div class="work__box">
                 <div class="work__text">
-                    <h3>Notificator</h3>
+                    <h3>Android Bounce Ball</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                        eius.
+                        ---------------
                     </p>
-                    <ul class="work__list">
-                        <li>React</li>
-                        <li>Next.js</li>
-                        <li>Node</li>
-                        <li>MongoDB</li>
-                    </ul>
-
                     <div class="work__links">
-                        <a href="#" class="link__text">
-                            Visit Site <span>&rarr;</span>
+                        <a href="https://github.com/doruk-altan/AndroidBounceBall" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
                         </a>
-                        <a href="#">
-                            <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                        <a href="https://github.com/doruk-altan/AndroidBounceBall" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
                         </a>
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+                    <img src="./images/BounceBall_image.png" class="work__image" alt="Project 4" />
+                </div>
+            </div>
+
+            <div class="work__box">
+                <div class="work__text">
+                    <h3>Carrot Collection</h3>
+                    <p>
+                        ---------------
+                    </p>
+                    <div class="work__links">
+                        <a href="https://github.com/doruk-altan/Carrot-Collection" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
+                        </a>
+                        <a href="https://github.com/doruk-altan/Carrot-Collection" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+                <div class="work__image-box">
+                    <img src="./images/CarrotCollection_image.png" class="work__image" alt="Project 5" />
+                </div>
+            </div>
+
+            <div class="work__box">
+                <div class="work__text">
+                    <h3>Flappy Bird Clone</h3>
+                    <p>
+                        ---------------
+                    </p>
+                    <div class="work__links">
+                        <a href="https://github.com/doruk-altan/Not-Flappy-Bird" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
+                        </a>
+                        <a href="https://github.com/doruk-altan/Not-Flappy-Bird" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+                <div class="work__image-box">
+                    <img src="./images/FlappyBird_image.png" class="work__image" alt="Project 6" />
+                </div>
+            </div>
+
+            <div class="work__box">
+                <div class="work__text">
+                    <h3>Ball Crush</h3>
+                    <p>
+                        ---------------
+                    </p>
+                    <div class="work__links">
+                        <a href="https://github.com/doruk-altan/Ball-Crush" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
+                        </a>
+                        <a href="https://github.com/doruk-altan/Ball-Crush" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+                <div class="work__image-box">
+                    <img src="./images/BallCrush_image.png" class="work__image" alt="Project 7" />
                 </div>
             </div>
         </div>
