--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="work__text">
                     <h3>Hells Kitchen</h3>
                     <p>
-                        ---------------
+                        Cook as many correct orders as you can before time runs out.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/HellsKitchen" target="_blank" class="link__text">
@@ -83,7 +83,7 @@
                 <div class="work__text">
                     <h3>Zombie Takeover</h3>
                     <p>
-                        ---------------
+                        Dodge all zombies and ghosts to survive as long as you can.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/Zombie-Takeover" target="_blank" class="link__text">
@@ -103,7 +103,7 @@
                 <div class="work__text">
                     <h3>Angry Birds Clone</h3>
                     <p>
-                        ---------------
+                        Take out all the enemies before you run out of birds.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/Angry-Birds" target="_blank" class="link__text">
@@ -123,7 +123,7 @@
                 <div class="work__text">
                     <h3>Android Bounce Ball</h3>
                     <p>
-                        ---------------
+                        Keep the ball from falling down with the paddle as the ball gets faster.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/AndroidBounceBall" target="_blank" class="link__text">
@@ -143,7 +143,7 @@
                 <div class="work__text">
                     <h3>Carrot Collection</h3>
                     <p>
-                        ---------------
+                        Gather all the random carrots in the map before time runs out.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/Carrot-Collection" target="_blank" class="link__text">
@@ -163,7 +163,7 @@
                 <div class="work__text">
                     <h3>Flappy Bird Clone</h3>
                     <p>
-                        ---------------
+                        Fly through the random obstacle pipes.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/Not-Flappy-Bird" target="_blank" class="link__text">
@@ -183,7 +183,7 @@
                 <div class="work__text">
                     <h3>Ball Crush</h3>
                     <p>
-                        ---------------
+                        Pop all the balls before time runs out. They get smaller as they are popped.
                     </p>
                     <div class="work__links">
                         <a href="https://github.com/doruk-altan/Ball-Crush" target="_blank" class="link__text">
@@ -210,19 +210,19 @@
         <div class="about__content">
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
-            </p>
+              <p>
+                  I'm a passionate game developer with a love for creating
+                  immersive experiences that captivate players.
+                  With expertise in Unity, C#, C++, I enjoy bringing ideas to life
+                  through engaging mechanics, stunning visuals, and compelling narratives.
+              </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="./DorukAltan_CV.pdf" download="DorukAltan_CV.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/AboutMeImage.png" alt="" />
           </div>
         </div>
       </div>
