--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
                   through engaging mechanics, stunning visuals, and compelling narratives.
               </p>
             <!-- Provide a link to your resume -->
-            <a href="DorukAltan_CV.pdf" download="DorukAltan_CV.pdf" class="btn">My Resume</a>
+            <a href="/DorukAltan_CV.pdf" download="DorukAltanCV.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/AboutMeImage.png" width="1000" height="600" alt="" />
+            <img class="about__photo" src="./images/AboutMeImage.png" width="600" height="400" alt="" />
           </div>
         </div>
       </div>
