--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                   through engaging mechanics, stunning visuals, and compelling narratives.
               </p>
             <!-- Provide a link to your resume -->
-            <a data-src="DorukAltan_CV.pdf" download="DorukAltanCV.pdf" class="btn">My Resume</a>
+            <a href="/DorukAltan_CV.pdf" download="DorukAltanCV.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
