--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                   through engaging mechanics, stunning visuals, and compelling narratives.
               </p>
             <!-- Provide a link to your resume -->
-            <a href="./Portfolio/DorukAltan_CV.png" download="DorukAltanCV.png" class="btn">My Resume</a>
+            <a src="/DorukAltan_CV.png" download="DorukAltanCV.png" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
