--- a/index.html
+++ b/index.html
@@ -81,6 +81,46 @@
 
             <div class="work__box">
                 <div class="work__text">
+                    <h3>Strateon</h3>
+                    <p>
+                        Real-time strategy game where you can place buildings to get resources or produce units.
+                    </p>
+                    <div class="work__links">
+                        <a href="https://github.com/doruk-altan/Strateon-Demo" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
+                        </a>
+                        <a href="https://github.com/doruk-altan/Strateon-Demo" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+                <div class="work__image-box">
+                    <img src="./images/Strateon_image.png" class="work__image" alt="Project 2" />
+                </div>
+            </div>
+
+            <div class="work__box">
+                <div class="work__text">
+                    <h3>Incredibeatbox</h3>
+                    <p>
+                        2D music production game similar to Incredibox. Place instruments on beatboxers to make music.
+                    </p>
+                    <div class="work__links">
+                        <a href="https://github.com/doruk-altan/Incredibeatbox" target="_blank" class="link__text">
+                            To GitHub <span>&rarr;</span>
+                        </a>
+                        <a href="https://github.com/doruk-altan/Incredibeatbox" title="View Source Code" target="_blank">
+                            <img src="./images/github.svg" class="work__code" alt="GitHub">
+                        </a>
+                    </div>
+                </div>
+                <div class="work__image-box">
+                    <img src="./images/Incredibeatbox_image.png" class="work__image" alt="Project 3" />
+                </div>
+            </div>
+
+            <div class="work__box">
+                <div class="work__text">
                     <h3>Zombie Takeover</h3>
                     <p>
                         Dodge all zombies and ghosts to survive as long as you can.
@@ -95,7 +135,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/ZombieTakeover_image.png" class="work__image" alt="Project 2" />
+                    <img src="./images/ZombieTakeover_image.png" class="work__image" alt="Project 4" />
                 </div>
             </div>
 
@@ -115,7 +155,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/AngryBirds_image.png" class="work__image" alt="Project 3" />
+                    <img src="./images/AngryBirds_image.png" class="work__image" alt="Project 5" />
                 </div>
             </div>
 
@@ -135,7 +175,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/BounceBall_image.png" class="work__image" alt="Project 4" />
+                    <img src="./images/BounceBall_image.png" class="work__image" alt="Project 6" />
                 </div>
             </div>
 
@@ -155,7 +195,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/CarrotCollection_image.png" class="work__image" alt="Project 5" />
+                    <img src="./images/CarrotCollection_image.png" class="work__image" alt="Project 7" />
                 </div>
             </div>
 
@@ -175,7 +215,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/FlappyBird_image.png" class="work__image" alt="Project 6" />
+                    <img src="./images/FlappyBird_image.png" class="work__image" alt="Project 8" />
                 </div>
             </div>
 
@@ -195,7 +235,7 @@
                     </div>
                 </div>
                 <div class="work__image-box">
-                    <img src="./images/BallCrush_image.png" class="work__image" alt="Project 7" />
+                    <img src="./images/BallCrush_image.png" class="work__image" alt="Project 9" />
                 </div>
             </div>
         </div>
